--- a/oes-core/src/main/resources/templates/auth/login.html
+++ b/oes-core/src/main/resources/templates/auth/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>OES_学生|教师登录</title>
+    <title>OES | 身份认证</title>
     <!-- 引入全局公共js / css -->
     <%include("../include/css.html"){}%>
     <style>
@@ -26,13 +26,16 @@
         <div class="card-body login-card-body">
             <div class="col-md-12">
                 <ul class="nav nav-tabs" id="custom-content-below-tab" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#stuLine" data-toggle="tab">学生</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#teacherLine" data-toggle="tab">教师</a>
-                        </li>
-                    </ul>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#stuLine" data-toggle="tab">学生</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#teacherLine" data-toggle="tab">教师</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#adminLine" data-toggle="tab">管理员</a>
+                    </li>
+                </ul>
 
                 <div class="card-body">
                     <div class="tab-content">
@@ -92,6 +95,38 @@
                                     <!-- /.col -->
                                     <div class="col-12">
                                         <button type="button" id="teacherBtn" class="btn btn-primary btn-block">登录
+                                        </button>
+                                    </div>
+                                    <!-- /.col -->
+                                </div>
+                                <div class="footer">*推荐使用IE 10 或以上版本 IE 浏览器或 Chrome 内核浏览器访问本站</div>
+                            </form>
+                        </div>
+
+                        <div class="tab-pane" id="adminLine">
+                            <form id="admin-form">
+                                <div class="input-group mb-3">
+                                    <input type="text" id="adminId" name="adminId" class="form-control"
+                                           placeholder="管理员账号" value="admin">
+                                    <div class="input-group-append">
+                                        <div class="input-group-text">
+                                            <span class="fa fa-user-circle"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="input-group mb-3">
+                                    <input type="password" id="adminPassword" name="password" class="form-control"
+                                           placeholder="密码" value="123">
+                                    <div class="input-group-append">
+                                        <div class="input-group-text">
+                                            <span class="fa fa-lock"></span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <!-- /.col -->
+                                    <div class="col-12">
+                                        <button type="button" id="adminBtn" class="btn btn-primary btn-block">登录
                                         </button>
                                     </div>
                                     <!-- /.col -->
