--- a/oes-core/src/main/resources/templates/student/exam/detail.html
+++ b/oes-core/src/main/resources/templates/student/exam/detail.html
@@ -207,8 +207,7 @@
                                 </div>
                                 <%}%>
                                 <div class="card-body">
-                                    <button id="submitBtn" class="btn btn-success pull-right">提交答案
-                                    </button>
+                                    <button id="submitBtn" class="btn btn-success pull-right">提交答案 </button>
                                 </div>
                             </form>
                         </div>
