--- a/oes-core/src/main/resources/templates/student/exam/list.html
+++ b/oes-core/src/main/resources/templates/student/exam/list.html
@@ -142,9 +142,7 @@
     </aside>
 </div>
 <!-- 引入全局 js 脚本文件 -->
-<%
-include("../../include/js.html"){}
-%>
+<% include("../../include/js.html"){} %>
 </body>
 </html>
 
